# common-scripts

./: README.md  diff.py  diff2.py
file/: diff.py
ftp/: README.md  myhttp.py
install-enviroments/: install-common-software-for-linux.sh
install-opencv/: LICENSE  install_opencv.sh  make.sh  video.cpp
install-opencv/test_opencv_camera/: CMakeLists.txt  video.cpp
server/: README.md  ssh-2-remote.sh
